// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene delete should delete a scene 1`] = `
Array [
  Object {
    "description": "this is a second test",
    "name": "scene_2",
    "scene_id": 2,
  },
]
`;

exports[`Scene delete should delete a scene 2`] = `
Array [
  Object {
    "action_id": 3,
    "body": null,
    "name": "call scene",
    "scene_id": 2,
    "target_id": 2,
    "type": "SCENE",
  },
]
`;
